Fixed Fontawesome icon Background Align

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -268,7 +268,7 @@ footer a {
     font-size: 1.25rem;
     background: #ffffff10;
     border-radius: 50%;
-    padding: .1875rem .5rem;
+    padding: 5px 8px;
     margin: 1% 0.5%;
 }
 
